--- a/app/src/main/res/layout/activity_birds.xml
+++ b/app/src/main/res/layout/activity_birds.xml
@@ -7,38 +7,36 @@
     tools:context="com.azexotic.rescue.azebr.BirdsActivity"
     android:background="@drawable/background2"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="#90000000"
+        android:orientation="vertical"
         android:padding="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="PATCHES"
             android:textColor="#ffffff"
             android:textSize="45sp"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/patches"
             android:layout_marginBottom="10dp"
-            />
+            android:src="@drawable/patches" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Our spotlight bird is Patches! Patches is a Goffin's Cockatoo. He has a very playful spirit and loves to be interacted with. He's a little shy, but once he opens up to you, he's truly a character full of personality. Come down to the rescue and meet Patches today!"
             android:textColor="#ffffff"
-            android:textSize="17sp"
-            android:text=" Our spotlight bird is Patches! Patches is a Goffin's Cockatoo. He has a very playful spirit and loves to be interacted with. He's a little shy, but once he opens up to you, he's truly a character full of personality. Come down to the rescue and meet Patches today!"
-            />
+            android:textSize="17sp" />
 
     </LinearLayout>
 </LinearLayout>
