--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="We will use this space to inform you of future events.\n\nThank you for your support!\n\n~AZ Exotic Team"
+            android:padding="8dp"
             android:textSize="30sp"
             android:textColor="#ffffff"
             />
